# kconfigwidgets

./: .git-blame-ignore-revs  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5ConfigWidgetsConfig.cmake.in  KF6ConfigWidgetsConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kcmdbartest.cpp  kcolorschemetest.colors  kcolorschemetest.cpp  kconfigdialog_unittest.cpp  khamburgermenutest.cpp  klanguagenametest.cpp  krecentfilesactiontest.cpp  krecentfilesactiontest.h  kstandardactiontest.cpp  kstandardactiontest.h  pythontest.py
src/: CMakeLists.txt  Messages.sh  entry.desktop  kcmodule.cpp  kcmodule.h  kcmoduleqml.cpp  kcmoduleqml.h  kcodecaction.cpp  kcodecaction.h  kcolorscheme.cpp  kcolorscheme.h  kcolorschemehelpers_p.h  kcolorschememanager.cpp  kcolorschememanager.h  kcolorschememanager_p.h  kcolorschememenu.cpp  kcolorschememenu.h  kcolorschememodel.cpp  kcolorschememodel.h  kcommandbar.cpp  kcommandbar.h  kcommandbarmodel_p.cpp  kcommandbarmodel_p.h  kconfigdialog.cpp  kconfigdialog.h  kconfigdialogmanager.cpp  kconfigdialogmanager.h  kconfigdialogmanager_p.h  kconfigviewstatesaver.cpp  kconfigviewstatesaver.h  kconfigwidgets-index.qdoc  kconfigwidgets.qdoc  kconfigwidgets.qdocconf  kconfigwidgets_config.h.cmake  khamburgermenu.cpp  khamburgermenu.h  khamburgermenu_p.h  khamburgermenuhelpers.cpp  khamburgermenuhelpers.h  khamburgermenuhelpers_p.h  (+28 more)
src/designer/: CMakeLists.txt
src/integrationplugin/: CMakeLists.txt  kmessageboxdontaskagainstorageplugin.cpp  kmessageboxdontaskagainstorageplugin.h
src/language_files/af/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/am/: kf6_entry.desktop
src/language_files/ar/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/as/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ast/: kf6_entry.desktop
src/language_files/az/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/be/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/be@latin/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/bg/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/bn/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/bn_IN/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/br/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/bs/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ca/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ca@valencia/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/crh/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/cs/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/csb/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/cy/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/da/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/de/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/el/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/en_GB/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/eo/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/es/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/et/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/eu/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/fa/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/fi/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/fr/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/fy/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ga/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/gd/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/gl/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/gu/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ha/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/he/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hi/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hne/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hr/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hsb/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hu/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/hy/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ia/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/id/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ie/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/is/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/it/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ja/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ka/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/kk/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/km/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/kn/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ko/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ku/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/lb/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/lt/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/lv/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/mai/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/mk/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ml/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/mr/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ms/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/my/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/nb/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/nds/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/ne/: kf5_entry.desktop  kf6_entry.desktop
src/language_files/nl/: kf5_entry.desktop  kf6_entry.desktop
tests/: CMakeLists.txt  kcodecactiontest.cpp  kcodecactiontest.h  kcolorschemedemo.cpp  kcolorutilsdemo.cpp  kcolorutilsdemo.h  kcommandbartest.cpp  kimageframe.cpp  kimageframe.h  klanguagebuttontest.cpp  krecentfilesactiontest.cpp  krecentfilesactiontest.h
(+507 files in other folders)
